# iris-link-backend

./: .gitignore  .gitmodules  CMakeLists.txt  main.cc  vcpkg.json
controllers/: api_v1_WsControllerTest.cc  api_v1_WsControllerTest.h
plugins/: Configurator.cc  Configurator.h  MqttManager.cc  MqttManager.h
test/: CMakeLists.txt
